Co-pilot fixes and additional improvements
Signed-off-by: Paul Smedley <paul@smedley.id.au>